Locproduidpid added authorization "1.0.5"  19-06-2024

--- a/xs-app.json
+++ b/xs-app.json
@@ -5,7 +5,7 @@
     {
       "source": "^/v2/(.*)$",
       "target": "/v2/$1",
-      "destination": "ConfigProd",
+      "destination": "ConfigProdAuth",
       "authenticationType": "xsuaa",
       "csrfProtection": false
     },
