Locuidpid changed roles "2407.00.01"

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -152,7 +152,8 @@
   "sap.platform.cf": {
     "oAuthScopes": [
         "$XSAPPNAME.User",
-        "$XSAPPNAME.Support"
+        "$XSAPPNAME.Support",
+         "$XSAPPNAME.admin"
     ],
     "ui5VersionNumber": "1.117.1"
 }
