--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -100,6 +100,17 @@
               "earlyRequests": true,
               "groupId": "$direct"
           }
+      },
+      "PCModel": {
+        "dataSource": "mainService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true,
+          "groupId": "$direct"
+        }
       }
     },
     "resources": {
